--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h1>Oh, Flip!</h1>
                 <h4>Sep. 13th, 2019</h4>
                 <div id="game"></div>
-                <canvas id="canvas" width="800" height="600" style="width:800px; height:600px; image-rendering:pixelated; background-color:black"></canvas>
+                <canvas id="canvas" width="800" height="600" style="width:800px; height:600px; image-rendering:pixelated; background-color:#AADDFF"></canvas>
                 <br/><br/>
 
                 <script src="main.js"></script>
