--- a/index.html
+++ b/index.html
@@ -1,104 +1,33 @@
 <!doctype html>
 <html>
     <head>
-        <!-- Global Site Tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106572464-1"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments)};
-        gtag('js', new Date());
-
-        gtag('config', 'UA-106572464-1');
-        </script>
-
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="/css/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-mobile-web-app-title" content="oh, flip!">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+        <title>oh, flip!</title>
+
         <style>
-            .slidecontainer {
-                width: 100%;
-            }
-
-            .slider {
-                -webkit-appearance: none;
-                width: 700px;
-                height: 25px;
-                background: #d3d3d3;
-                outline: none;
-                opacity: 0.7;
-                -webkit-transition: .2s;
-                transition: opacity .2s;
-            }
-
-            .slider:hover {
-                opacity: 1;
-            }
-
-            .slider::-webkit-slider-thumb {
-                -webkit-appearance: none;
-                appearance: none;
-                width: 45px;
-                height: 45px;
-                background: #0270FF;
-                cursor: pointer;
-            }
-
-            .slider::-moz-range-thumb {
-                width: 45px;
-                height: 45px;
-                background: #0270FF;
-                cursor: pointer;
-            }
-
-            .button {
-                background-color: #0270FF;
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 24px;
-                opacity: 0.7;
-                -webkit-transition: .2s;
-                transition: opacity .2s;
-            }
-
-            .button:hover {
-                opacity: 1;
-            }
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            border: 0;
+            overflow: hidden; /*  Disable scrollbars */
+            display: block;  /* No floating content on sides */
+            background-color: black;
+        }
         </style>
-        <title>Super Micro Fun - Oh, Flip!</title>
     </head>
     <body>
-        <script src="/header.js"></script>
-
-        <div id="content">
-            <center>
-                <h1>Oh, Flip!</h1>
-                <h4>Sep. 13th, 2019</h4>
-                <div id="game"></div>
-                <canvas id="canvas" width="800" height="600" style="width:800px; height:600px"></canvas>
-                <br/><br/>
-
-                <script src="main.js"></script>
-            </center>
-
-            <br/>
-            <br/>
-
-            <div id="info">
-                <br/>
-                <b>What Is This?</b><br/>
-                --</a>!<br/><br/>
-
-                <b>How Long Did It Take?</b><br/>
-                --<br/><br/>
-
-                <b>How Many Lines of Code?</b><br/>
-                --<br/><br/>
-            </div>
-
-            <script src="/footer.js"></script>
+        <center>
+        <div id="game">
+            <canvas id="canvas" width="800" height="600" style="width:800px; height:600px"></canvas>
         </div>
+        </center>
+        <script src="main.js"></script>
     </body>
 </html>
