--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <canvas id="canvas" width="800" height="600" style="width:800px; height:600px"></canvas>
         </div>
         </center>
-        <script src="main.min.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
