Added super micro fun website version

--- a/index_Website.html
+++ b/index_Website.html
@@ -89,13 +89,22 @@
             <div id="info">
                 <br/>
                 <b>What Is This?</b><br/>
-                --</a>!<br/><br/>
+                My 2019 <a href="https://js13kgames.com">js13k</a> submission! Here's the silly game description:<br/><br/>
+
+                oh, flip!<br/>
+                a game about backflips<br/><br/>
+                You're a majestic square with one leg who loves to flip! Spend your afternoon bouncing as high as you can while crushing some sick spins.<br/><br/>
+                ----------<br/>
+                Tap or Click to flip<br/>
+                Land upright to gain height<br/>
+                Complete goals to fill yourself with happiness<br/>
+                ----------<br/><br/>
 
                 <b>How Long Did It Take?</b><br/>
-                --<br/><br/>
+                4 days<br/><br/>
 
                 <b>How Many Lines of Code?</b><br/>
-                --<br/><br/>
+                683<br/><br/>
             </div>
 
             <script src="/footer.js"></script>
